feat(back): master integration of auction system, logistics, and real-time security after synchronizing with main